--- a/src/views/ejs/messages.ejs
+++ b/src/views/ejs/messages.ejs
@@ -13,6 +13,11 @@
 
 <body>
     <p> <% messages %></p>
+    <p> <% messages.data %></p>
+    <p> <% messages.length %></p>
+    <p> <%- messages %></p>
+    <p> <%- messages.data %></p>
+    <p> <%-messages.length %></p>
 </body>
 
 </html>
