--- a/src/views/ejs/homepage.ejs
+++ b/src/views/ejs/homepage.ejs
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <%- include ("../partials/headLinks") %>
+  
     <title>Messenger Bot</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="shortcut icon" type="image/ico" href="/favicon.ico" />
+
+    <meta name="keywords" content="Messages, Bot, Messenger, Facebook">
+    <meta name="description" content="Page for conversation with a Messenger Bot">
 
 </head>
 <body>
+
+  <header>
+    <%- include ("../partials/header") %>
+  </header>
+
 <h1> Messenger bot </h1>
 
 <!-- Load Facebook SDK for JavaScript -->
