--- a/src/views/ejs/homepage.ejs
+++ b/src/views/ejs/homepage.ejs
@@ -33,7 +33,7 @@
 <button onclick="showHide()"> Show demo conversation </button>
 
 <div id="animation" style="display: none;">
-  <img src="" alt="demo conversation"  width=250/>
+  <img src="https://github.com/JusticeBringer/Node.js-Messenger-Bot/blob/master/src/public/images/demo.gif" alt="demo conversation"  width=250/>
 </div>
 
 <script>
