--- a/src/views/ejs/homepage.ejs
+++ b/src/views/ejs/homepage.ejs
@@ -30,25 +30,7 @@
 <h2> Maintaining the conversation </h2>
 <p> Bot is still very early on his learning phase, so you should try to answer correctly to the questions and choosing answers from given cards, although you can manually type messages. </p>
 
-<button onclick="showHide()"> Show demo conversation </button>
-
-<div id="animation" style="display: none;">
-  <img src="https://github.com/JusticeBringer/Node.js-Messenger-Bot/blob/master/src/public/images/demo.gif" alt="demo conversation"  width=250/>
-</div>
-
-<script>
-function showHide(){
-    let bt = document.getElementById("animation");
-
-    if (bt.style.display === 'block'){
-        bt.style.display = 'none';
-    }
-    else{
-        bt.style.display = 'block';
-    }
-}
-
-</script>
+<button> <a href="https://github.com/JusticeBringer/Node.js-Messenger-Bot/blob/master/readme.md"> See demo conversation </a> </button>
 
 <!-- Load Facebook SDK for JavaScript -->
 <div id="fb-root"></div>
