--- a/src/views/ejs/homepage.ejs
+++ b/src/views/ejs/homepage.ejs
@@ -28,9 +28,9 @@
 </ul>
 
 <h2> Maintaining the conversation </h2>
-<p> Bot is still very early on his learning phase, so you should try to answer correctly to the questions and choosing answers from given cards, although you can manually type messages. </p>
+<p> Bot is still very early on his learning phase, so you should try to correctly answer the questions and choosing answers from given cards, although you can manually type messages.</p>
 
-<button> <a href="https://github.com/JusticeBringer/Node.js-Messenger-Bot/blob/master/readme.md"> See demo conversation </a> </button>
+<button> <a href="https://github.com/JusticeBringer/Node.js-Messenger-Bot/blob/master/readme.md#demo-conversation"> See demo conversation </a> </button>
 
 <!-- Load Facebook SDK for JavaScript -->
 <div id="fb-root"></div>
