--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -1,15 +1,7 @@
 <div id="header-wrap">
-	<div class="row barLooks">
-		<div class="fit10 fltLeft"><p/></div>
-		<div class="fit80 fltLeft">
-			<nav>
-				<ul class="menu" id="">
-					<li>  <a href="#" class="big-name"> Messenger Bot </a> </li>
-				</ul>
-			</nav>
-		</div>
-		<div class="fit10 fltLeft">
-			<p/>
-		</div>
-	</div>
+  <div class="row barLooks">
+    <nav>
+      <li><a href="#" class="big-name for-header"> Messenger Bot </a></li>
+    </nav>
+  </div>
 </div>
